--- a/web/app/views/race_director/index.html.haml
+++ b/web/app/views/race_director/index.html.haml
@@ -16,10 +16,14 @@
         %p
           .small
             = @current_race_session.mode
+            |
+            %span#lap_count
+              Laps 0
   .col-xs-6
     %h2
       Last Lap Times
-    = render partial: 'lap_times'
+    #lap_overview
+      -#= render partial: 'lap_times'
 
 .row
   .col-xs-12
@@ -29,3 +33,14 @@
       =link_to(url_for(action: 'play_custom', controller: 'api/v1/sound', id: soundfile.id),{remote: true, class: 'btn btn-primary'}) do
         .span.glyphicon.glyphicon-play
           = soundfile.title
+
+:javascript
+  setInterval(function() {
+    $.getJSON( "/api/v1/monitor", function( data ) {
+      $("#lap_count").html("Laps " + data['session']['current_lap_count']);
+    });
+
+    $.get( "/race_director/lap_times", function( data ) {
+      $("#lap_overview").html(data);
+    });
+  },2000);
