first working version of race director in the web gui improved some things and fixed a couple of bugs in ir_daemon

--- a/web/app/views/race_director/_lap_times.html.haml
+++ b/web/app/views/race_director/_lap_times.html.haml
@@ -14,7 +14,7 @@
           Placement
     %tbody
       - @current_race_session_adapter.listing.each do |entry|
-        %tr
+        %tr{class: "#{"success" if entry['latest_tracked']}"}
           %td
             = entry['pilot']['name']
           %td
