play sound files for each lap in competition mode

--- a/web/app/views/race_director/index.html.haml
+++ b/web/app/views/race_director/index.html.haml
@@ -38,7 +38,7 @@
 = render file: '/shared/_panel_race_session_control'
 
 :javascript
-  /*setInterval(function() {
+  setInterval(function() {
     $.getJSON( "/api/v1/monitor", function( data ) {
       $("#lap_count").html("Laps " + data['session']['current_lap_count']);
     });
