--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -23,25 +23,37 @@
             EasyRaceLapTimer
         #navbar.collapse.navbar-collapse
           %ul.nav.navbar-nav.navbar-right
-            %li
-              =link_to('Race Director',{action: 'index',controller: '/race_director'})
-            %li.dropdown
-              %a{href:"#", class:"dropdown-toggle", "data-toggle"=>"dropdown", role:"button", "aria-haspopup"=>"true", "aria-expanded"=>"false"}
-                Configuration
-                %span.caret
-              %ul.dropdown-menu
-                %li
-                  =link_to('System',{action: 'index',controller: '/system'})
-                %li
-                  =link_to('Pilots',{action: 'index',controller: '/system/pilot'})
-                %li
-                  =link_to('Soundeffects',{action: 'index',controller: '/system/soundfile'})
+            - if current_user && (current_user.has_role?(:admin) || current_user.has_role?(:race_director))
+              %li
+                =link_to('Race Director',{action: 'index',controller: '/race_director'})
+            - if current_user && current_user.has_role?(:admin)
+              %li.dropdown
+                %a{href:"#", class:"dropdown-toggle", "data-toggle"=>"dropdown", role:"button", "aria-haspopup"=>"true", "aria-expanded"=>"false"}
+                  Configuration
+                  %span.caret
+                %ul.dropdown-menu
+                  %li
+                    =link_to('System',{action: 'index',controller: '/system'})
+                  %li
+                    =link_to('Users',{action: 'index',controller: '/system/user'})
+                  %li
+                    =link_to('Pilots',{action: 'index',controller: '/system/pilot'})
+                  %li
+                    =link_to('Soundeffects',{action: 'index',controller: '/system/soundfile'})
             %li
               =link_to('Monitor',{action: 'index',controller: '/monitor'})
             %li
               =link_to('Pilots',{action: 'index',controller: '/pilots'})
             %li
               =link_to('History',{action: 'index',controller: '/history'})
+            - if current_user
+              %li
+                = link_to(main_app.destroy_user_session_path, {:method => :delete}) do
+                  Log Out
+            - else
+              %li
+                = link_to(main_app.new_user_session_path) do
+                  Login
             %li
               %a{href:"#"}
                 Version
