continued working on race events

--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -35,6 +35,8 @@
                   %li
                     =link_to('System',{action: 'index',controller: '/system'})
                   %li
+                    =link_to('Race Event',{action: 'index',controller: '/system/race_event'})
+                  %li
                     =link_to('Users',{action: 'index',controller: '/system/user'})
                   %li
                     =link_to('Pilots',{action: 'index',controller: '/system/pilot'})
