fixed last test, killed a bug ;)
improved heat management, starting a race session for groups works now, going to the next group also, and going to the next heat

--- a/web/app/views/pilots/index.html.haml
+++ b/web/app/views/pilots/index.html.haml
@@ -17,7 +17,7 @@
     - @pilots.each do |pilot|
       %tr
         %td
-          - if pilot.image
+          - if pilot.image && pilot.image.url
             = image_tag(pilot.image.url,width: 50,height:50)
         %td
           %strong
