--- a/web/app/views/system/pilot/index.html.haml
+++ b/web/app/views/system/pilot/index.html.haml
@@ -17,7 +17,7 @@
   .form-group
     %label{:for => "exampleInputEmail2"}
       = t('pilot.quad')
-    = f.text_field(:quad, placeholder: "ZMR 250 4S", class: 'form-control', required: true)
+    = f.text_field(:quad, placeholder: "ZMR 250 4S", class: 'form-control', required: false)
   .form-group
     %label{:for => "exampleInputEmail2"}
       = t('pilot.team')
