--- a/web/app/views/history/show.html.haml
+++ b/web/app/views/history/show.html.haml
@@ -18,3 +18,6 @@
   = render file: '/shared/_table_race_results_competition_mode', locals: {race_session: @current_race_session, race_session_adapter: @current_race_session_adapter}
 -else
   = render file: '/shared/_table_race_results_standard_mode', locals: {race_session: @current_race_session, race_session_adapter: @current_race_session_adapter}
+
+-@current_race_session_adapter.pilot_ids.each do |pilot_id|
+  = render partial: 'competition_mode_pilot', locals: {pilot: Pilot.find(pilot_id)}
