--- a/web/app/views/history/show.html.haml
+++ b/web/app/views/history/show.html.haml
@@ -52,6 +52,20 @@
             = formated_lap_time(@current_race_session_adapter.num_time_penalties_for_lap(pilot,lap.lap_num) * @current_race_session.time_penalty_per_satellite)
           %td
             -if lap.invalidated
-              = link_to('Validate',{action: 'validate_lap', race_session_id: @current_race_session.id, id: lap.id})
+              = link_to({action: 'validate_lap', race_session_id: @current_race_session.id, id: lap.id},{class: 'btn btn-primary btn-xs'}) do
+                %span.glyphicon.glyphicon-certificate
+                Validate
             - else
-              = link_to('Invalidate',{action: 'invalidate_lap', race_session_id: @current_race_session.id, id: lap.id})
+              = link_to({action: 'invalidate_lap', race_session_id: @current_race_session.id, id: lap.id},{class: 'btn btn-primary btn-xs'}) do
+                %span.glyphicon.glyphicon-remove-circle
+                Invalidate
+            - if lap.merged?
+              = link_to('Unmerge',{action: 'unmerge', race_session_id: @current_race_session.id, id: lap.id})
+            -else
+              = link_to({action: 'merge_up', race_session_id: @current_race_session.id, id: lap.id},{class: 'btn btn-primary btn-xs'}) do
+                %span.glyphicon.glyphicon-chevron-up
+                Merge Up
+
+              = link_to({action: 'merge_down', race_session_id: @current_race_session.id, id: lap.id},{class: 'btn btn-primary btn-xs'}) do
+                %span.glyphicon.glyphicon-chevron-down
+                Merge Down
