--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -35,7 +35,7 @@
                   %li
                     =link_to('System',{action: 'index',controller: '/system'})
                   %li
-                    =link_to('Race Event',{action: 'index',controller: '/system/race_event'})
+                    =link_to('RaceBox',{action: 'index',controller: '/system/race_box'})
                   %li
                     =link_to('Users',{action: 'index',controller: '/system/user'})
                   %li
