removed monitor polling in favour of actioncable (websockets)

--- a/web/app/views/monitor/index.html.haml
+++ b/web/app/views/monitor/index.html.haml
@@ -6,8 +6,8 @@
     Sorry, there's no race at present going on.
 
 :javascript
-  setInterval(function() {
+  /*setInterval(function() {
     $.get("/monitor/view", function( data ){
       $("#monitor_view").html(data);
     });
-  },2000);
+  },2000);*/
