--- a/web/app/views/system/pilot/edit.html.haml
+++ b/web/app/views/system/pilot/edit.html.haml
@@ -19,7 +19,7 @@
   .form-group
     %label{:for => "exampleInputEmail2"}
       = t('pilot.quad')
-    = f.text_field(:quad, placeholder: "ZMR 250 4S", class: 'form-control', required: true)
+    = f.text_field(:quad, placeholder: "ZMR 250 4S", class: 'form-control')
   .form-group
     %label{:for => "exampleInputEmail2"}
       = t('pilot.team')
