--- a/web/app/views/history/index.html.haml
+++ b/web/app/views/history/index.html.haml
@@ -47,5 +47,5 @@
           %td
             - if current_user && current_user.has_role?(:admin)
               = link_to('Delete',url_for(action: 'delete', id: session.id),{method: 'DELETE', class: 'btn btn-warning', "data-confirm" => 'Are you sure?'})
-            -#= link_to('XLSX Export',url_for(action: 'export_to_xlsx', id: session.id),{class: 'btn btn-success'})
+            = link_to('XLSX Export',url_for(action: 'export_to_xlsx', id: session.id),{class: 'btn btn-success'})
             = link_to('PDF Export',url_for(action: 'pdf', id: session.id, format: :pdf),{class: 'btn btn-default btn-primary'})
